--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-
-    <style>h1{text-align:center;}</style>
+    <title>Malaysia Air Pollution (API) — Interactive Visualisation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
+
+    <!-- Vega libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
+
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -15,11 +17,11 @@
     <main>
       <h1>Malaysia Air Pollution (API) for 2022</h1>
 
-      <!-- Flex container: map + legend -->
+      <!-- MAP -->
       <div class="map-container">
         <div id="vis"></div>
 
-        <!-- Legend sits on the right -->
+        <!-- Custom Legend -->
         <svg id="legend" width="220" height="190" aria-label="API Legend">
           <g transform="translate(10,10)">
             <rect width="24" height="24" fill="green"></rect>
@@ -43,7 +45,17 @@
           </g>
         </svg>
       </div>
+
+      <!-- BAR CHART -->
+      <section class="chart-section">
+        <h2>Average API per Year (by State)</h2>
+        <div id="barVis"></div>
+      </section>
     </main>
+
+    <footer class="page-footer">
+      <small>Source: APIMS yearly dataset • Author: Xu Peng Chan • Vega-Lite v5</small>
+    </footer>
 
     <script src="vega_lite_vis.js"></script>
   </body>
